# covidVierosesSimolation

./: Alpha.cpp  Alpha.h  CMakeLists.txt  Delta.cpp  Delta.h  Omicron.cpp  Omicron.h  README.md  SARS_COV2.cpp  SARS_COV2.h  Simulation.cpp  Simulation.h  main.cpp
